# oot

./: README.md  example.yml  pyproject.toml  requrements.txt
src/: config.py  example.yml  main.py
src/commands/: fetch.py  git.py  path.py
src/oot/: __main__.py  cli.py  config.py  errors.py  metadata.py
src/oot/commands/: __init__.py  fetch.py  git.py  install.py  path.py  sync.py
src/oot/git/: __init__.py  clone.py  core.py  inspect.py  repo.py
src/oot/tests/: test_cli.py  test_fetch.py  test_install.py  test_repo.py  test_sync.py
