[project]
name = "oot"
version = "0.1.0"
description = "CLI tool for out-of-tree development"
authors = [{ name = "Jeremías Benítez" }]
dependencies = [
    "click",
    "pyyaml",
]

[project.scripts]
oot = "oot.cli:cli"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
